chaged app name

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -29,7 +29,7 @@
         <strong>Todo App</strong> – A simple, sleek task manager built with JavaScript.
       </li>
       <li>
-        <strong>Weather App</strong> – Displays weather using an external API.
+        <strong>navvtac app</strong> – Displays weather using an external API.
       </li>
     </ul>
   </section>
