--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <strong>Todo App</strong> – A simple, sleek task manager built with JavaScript.
       </li>
       <li>
-        <strong>navvtac app</strong> – Displays weather using an external API.
+        <strong>push app</strong> – Displays weather using an external API.
       </li>
     </ul>
   </section>
