--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section style="padding: 20px;">
     <h2>About Me</h2>
     <p>
-      I'm a passionate web developer with experience in building modern websites and web apps.
+      this is a passionate web developer with experience in building modern websites and web apps.
       I love clean code, responsive design, and intuitive user experiences.
     </p>
   </section>
