checking global config

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>About Me</h2>
     <p>
       I'm a passionate web developer with experience in building modern websites and web apps.
-      I love clean code, responsive design, and intuitive user experiences.
+      I really love clean code, responsive design, and intuitive user experiences.
     </p>
   </section>
 
